codepkg/objects/Invoice_Payment__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Of Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Funding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Source</label>
        <referenceTo>Funding_Source__c</referenceTo>
        <relationshipLabel>Invoice Payments</relationshipLabel>
        <relationshipName>Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Percent__c</fullName>
        <label>Invoice %</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Invoice Payments</relationshipLabel>
        <relationshipName>Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Paid_Amount__c</fullName>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Payment Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Recorded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Recorded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoice_Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rejection Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Partially Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Invoice Payment</label>
    <nameField>
        <displayFormat>IP-{0000}</displayFormat>
        <label>Invoice Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Payments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>